cicd/jenkins/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: jenkins
      containers:
      - image: jenkins/jenkins
        name: jenkins
        volumeMounts:
        - mountPath: /var/jenkins_home/
          name: jenkins
      volumes:
      - name: jenkins
        persistentVolumeClaim:
          claimName: jenkins
