cicd/jenkins/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: cicd
spec:
  port:
    targetPort: 8080
  to:
    name: jenkins
